# csp-discord

./: .copier-answers.yaml  .copier-answers.yml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
csp_discord/tests/: test_all.py
